--- a/cuve.css
+++ b/cuve.css
@@ -30,17 +30,19 @@
     position: relative;
     top: 0.1vw;
     left: 0.1vh;
+    cursor: pointer;
 }
 
 .action {
     width: 100%;
     height: 10vh;
-    position: relative; 
-    top: 10vh;
+    position: sticky; 
+    top: 13vh;
     background-color: rgb(160,160,160);
     display: none;
     flex-direction: row;
     justify-content: space-evenly;
+    z-index: 1;
 }
 
 .action div {
