--- a/historique.css
+++ b/historique.css
@@ -5,7 +5,7 @@
 table {
     table-layout: fixed;
     width: 100%;
-    border-collapse: collapse;
+    border-collapse: collapse;  
     margin-top: 5vh;
 }
 
@@ -31,9 +31,27 @@ td, th {
     border: 1px solid black;
     text-align: center;
     padding: 0.5em;
-    font-size: 1.2em;   
+    font-size: 1.2vw;   
 }
 
 .date_action {
     background-color: rgb(180, 180, 180);
+}
+
+button {
+    position: fixed;
+    height: 7vh;
+    width: 12vw;
+    bottom: 2vh;
+    right: 2vh;
+    text-align: center;
+    font-size: 1.2vw;
+    border: 3px solid black;
+    border-radius: 2vh;
+    box-sizing: border-box;
+    background-color: rgb(150, 150, 150);
+}
+button:hover {
+    background-color: rgb(190, 190, 190);
+    cursor: pointer;
 }
