--- a/traçabilité.css
+++ b/traçabilité.css
@@ -1,13 +1,14 @@
 #container1 {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 100vw;
     height: 10vh;
     background-color: rgb(150, 150, 150);
-    justify-content: center;
+    justify-content: flex-start;
+    align-items: center;
 }
 
-#container1 input {
+#container1 input[type="text"] {
     margin-left: 1vw;
     font-size: 1.5vw;
     width: 20vw;
@@ -21,14 +22,15 @@
 
 #container1 label {
     position: absolute;
-    top: 4vh;
+    top: 3vh;
     left: 2vw;
-    height: 2vh;
+    height: 4vh;
     font-size: 1.3vw;
+    line-height: 4vh;
     color: rgb(0, 0, 0);
     background-color: transparent;
     font-weight: bold;
-    transition: all 0.4s ease-out;
+    transition: all 0.3s ease-out;
     pointer-events: none;
 }
 #container1 input:focus {
@@ -36,7 +38,23 @@
 }
 #container1 input:focus ~ label {
     font-size: 1.3vw;
-    height: 2vh;
-    top: 2vh;
-    padding: 0px 0.5vw;
+    top: 0.6vh;
+    left: 2.3vw;
+}
+#container1 input[type="button"]{
+    margin-left: 1vw;
+    width: 10vw;
+    height: 4vh;
+    border-radius: 1vh;
+    font-size: 1.2vw;
+    background-color: rgb(200,200,200);
+    border: 0.3vh solid rgb(100,100,100);
+    border-color: rgb(140,140,140) rgb(100,100,100) rgb(100,100,100) rgb(140,140,140);
+}
+#container1 input[type="button"]:hover{
+    cursor: pointer;
+}
+#container1 input[type="button"]:active{
+    border: 0.3 solid rgb(100,100,100);
+    border-color: rgb(100,100,100) rgb(140,140,140) rgb(140,140,140) rgb(100,100,100);
 }
