--- a/traçabilité.css
+++ b/traçabilité.css
@@ -58,3 +58,20 @@
     border: 0.3 solid rgb(100,100,100);
     border-color: rgb(100,100,100) rgb(140,140,140) rgb(140,140,140) rgb(100,100,100);
 }
+table {
+    table-layout: fixed;
+    width: 100%;
+    border-collapse: collapse;  
+}
+
+thead {
+    height: 8vh;
+    background-color: rgb(150, 150, 150);
+}
+
+td, th {
+    border: 1px solid black;
+    text-align: center;
+    padding: 0.5em;
+    font-size: 1.2vw;   
+}
