--- a/traçabilité.css
+++ b/traçabilité.css
@@ -68,10 +68,15 @@ thead {
     height: 8vh;
     background-color: rgb(150, 150, 150);
 }
-
+tr {
+    width: 100vw;
+}
 td, th {
     border: 1px solid black;
     text-align: center;
     padding: 0.5em;
-    font-size: 1.2vw;   
+    font-size: 1vw;   
+}
+#col_1 {
+    width: 8vh;
 }
