--- a/style.css
+++ b/style.css
@@ -25,7 +25,13 @@ header {
     background-color: rgb(207, 207, 207);
     z-index: 1;
 }
-
+header p {
+    position: absolute;
+    margin: 0px;
+    margin-left: 66%;
+    font-size: x-small;
+    color: rgb(181, 181, 181);
+}
 header a {
     width: 10vw;
     height:3vh;
